Use Open Sans; justify page content

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,4 +1,12 @@
 /*
+ * Global resets
+ */
+html {
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  text-align: justify;
+}
+
+/*
  * Sidebar
  */
 .sidebar-sticky {
@@ -7,6 +15,7 @@
 .sidebar h1 {
   font-size: 1.75rem;
   font-family: inherit;
+  font-weight: 500;
 }
 .sidebar-nav li {
   padding: 0.5rem 1.5rem;
