--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,10 @@
 
     </ul>
 
-    <p class="copyright">&copy; {{ site.time | date: '%Y' }}. Some rights reserved.</p>
+    <div class="filler"></div>
+
+    <div>
+      <p class="copyright">&copy; {{ site.time | date: '%Y' }}. Some rights reserved.</p>
+    </div>
   </div>
 </div>
