Add jQuery Lifestream to sidebar. Kudos to simison!

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,9 @@
 
     </ul>
 
-    <div class="filler"></div>
+    <div class="filler">
+      <div id="lifestream">&nbsp;</div>
+    </div>
 
     <div>
       <p class="copyright">&copy; {{ site.time | date: '%Y' }}. Some rights reserved.</p>
