--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,9 @@
   <link rel="stylesheet" href="/public/css/syntax.css">
   <link rel="stylesheet" href="/public/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+
+  <link rel="stylesheet" href="https://rawgithub.com/christianv/jquery-lifestream/master/css/lifestream.css">
+  <link rel="stylesheet" href="/public/css/lifestream.css">
   <link rel="stylesheet" href="/public/css/custom.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700">
 
@@ -27,4 +30,9 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+  <!-- JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script src="https://rawgithub.com/christianv/jquery-lifestream/master/jquery.lifestream.min.js"></script>
+  <script src="/public/js/custom.js"></script>
 </head>
