--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -26,7 +26,7 @@ html {
   height: intrinsic;
 }
 .sidebar-sticky > .filler {
-  height: auto;
+  height: 100%;
 }
 .sidebar h1 {
   font-size: 1.75rem;
